--- a/Temel_Matematik/Temel_matematik.ipynb
+++ b/Temel_Matematik/Temel_matematik.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "* x belirli bir noktaya yaklaşırken y değeri nereye **yaklaşır**?\n",
     "\n",
-    "```math\n",
+    "```{admonition} Limit\n",
     "lim x -> 1 f(x) = (x**2 - 1) / (x - 1) \n",
     "\n",
     "```\n",
