--- a/Temel_Matematik/Temel_matematik.ipynb
+++ b/Temel_Matematik/Temel_matematik.ipynb
@@ -51,7 +51,33 @@
    "source": [
     "# Temel Matematik\n",
     "\n",
-    "## Türev\n"
+    "## Türev\n",
+    "\n",
+    "Bir fonkisyonun belirli bir noktadaki değişimini, değişim miktarı sıfıra yaklaşırken- çok çok küçükken- hesaplayan bir mantıktır.\n",
+    "\n",
+    "```\n",
+    "f(x) = y\n",
+    "\n",
+    "f(x) = x**2\n",
+    "\n",
+    "Aşağıdaki x**2 fonksiyonun grafiğini görebiliriz.\n",
+    "```\n",
+    "![f(x) = x**2](https://upload.wikimedia.org/wikipedia/commons/e/e4/Graph_of_function_f%28x%29_%3D_x%5E2.png)\n",
+    "\n",
+    "\n",
+    "Xi noktasında, x'i Dx kadar değiştirirsek, Dy ne olur?\n",
+    "\n",
+    "```\n",
+    "Dx / Dy ne olucak?\n",
+    "```\n",
+    "\n",
+    "Dy nasıl hesaplanır?\n",
+    "```\n",
+    "f(Xi + Dx) - f(Xi) / Dx \n",
+    "```\n",
+    "```\n",
+    "f(x) = x**2 'in türevi --> 2x\n",
+    "```\n"
    ]
   }
  ],
